--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <title>MaskC</title>
-<meta name="viewport" content="width=device-width, initial-scale=1">
+<Fta name="viewport" content="width=device-width, initial-scale=1">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <meta name="keywords" content="ALCHEMIST Responsive web template, Bootstrap Web Templates, Flat Web Templates, Andriod Compatible web template, 
 Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, SonyErricsson, Motorola web design" />
@@ -122,11 +122,11 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 		<div class="container">
 			<div class="build-mian">
 				<div class="col-md-8 build-left">
-					<h1>WE READY TO BUILD<span>YOUR HOME</span></h1>
-					<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+					<h1>想象力跑焦了，眼力就靠不住了<span>摄影师</span></h1>
+					<p>想象力跑焦了，眼力就靠不住了</p>
 				</div>
 				<div class="col-md-4 build-right">
-					<a href="#">GET A QUOTE FOR FREE</a>
+					<a href="#">影像从心，遂心随行</a>
 				</div>
 				<div class="clearfix"></div>
 			</div>
