--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 			<div class="build-mian">
 				<div class="col-md-8 build-left">
 					<h2>想象力跑焦了，眼力就靠不住了<span>摄影师</span></h2>
-					<p>想象力跑焦了，眼力就靠不住了</p>
+					<p>对呀伟大的摄影作品，重要的是情深，而不是景深</p>
 				</div>
 				<div class="col-md-4 build-right">
 					<a href="#">影像从心，遂心随行</a>
