--- a/index.html
+++ b/index.html
@@ -60,15 +60,15 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 				<a href="index.html"><img src="images/logo.png" alt=""></a>  
 			</div>
 			<div class="quote">
-				<a href="quote.html">欢迎来到我的网站</a>
+				<a href="quote.html">会员招募</a>
 			</div>
 			<!--start-top-nav-->
 			<nav class="top-nav">
 				<ul class="top-nav">
 					<li><a href="index.html"  class="active" >首页</a></li>
-					<li><a href="about.html">关于我们</a></li>
-					<li><a href="404.html">职位</a></li>
-					<li><a href="contact.html">联系我们</a></li>
+					<li><a href="about.html">摄影技巧</a></li>
+					<li><a href="404.html">光影瞬间</a></li>
+					<li><a href="contact.html">关于我们</a></li>
 				</ul>
 					<a href="#" id="pull"><img src="images/menu-icon.png" title="menu" /></a>
 			</nav>
