--- a/contact.html
+++ b/contact.html
@@ -51,15 +51,15 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 				<a href="index.html"><img src="images/logo.png" alt=""></a>  
 			</div>
 			<div class="quote">
-				<a href="quote.html">GET A QUOTE</a>
+				<a href="quote.html">加入我们</a>
 			</div>
 			<!--start-top-nav-->
 			<nav class="top-nav">
 				<ul class="top-nav">
-					<li><a href="index.html">Home</a></li>
-					<li><a href="about.html">About us</a></li>
-					<li><a href="404.html">jobs</a></li>
-					<li><a href="contact.html"  class="active">Contact us</a></li>
+					<li><a href="index.html">首页</a></li>
+					<li><a href="about.html">摄影技巧</a></li>
+					<li><a href="404.html">光影瞬间</a></li>
+					<li><a href="contact.html"  class="active">关于我们</a></li>
 				</ul>
 					<a href="#" id="pull"><img src="images/menu-icon.png" title="menu" /></a>
 			</nav>
